# Localhost-Minimal-Rust-Web-Server

./: Cargo.toml  README.md  localhost.json  test.txt
cgi-bin/: echo.py
error_pages/: 400.html  403.html  404.html  405.html  413.html  500.html
errors/: 400.html  403.html  404.html  405.html  413.html  500.html
src/: cgi.rs  config.rs  ep.rs  http.rs  main.rs  router.rs  server.rs  session.rs  upload.rs  util.rs
www/: index.html
