[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha1 = "0.10"
base64 = "0.21"
memchr = "2"
chrono = { version = "0.4", default-features = false, features=["clock"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
